--- a/TrainAssistant/MainWindow.xaml
+++ b/TrainAssistant/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        Title="12306助手v1.0 Beta" Height="550" Width="1000" ShowTitleBar="True"  ShowIconOnTitleBar="True" Icon="/Resources/ic_train.ico" MinWidth="590" MinHeight="350" Loaded="MetroWindow_Loaded">
+        Title="12306助手v1.1 Beta" Height="550" Width="1000" ShowTitleBar="True"  ShowIconOnTitleBar="True" Icon="/Resources/ic_train.ico" MinWidth="590" MinHeight="350" Loaded="MetroWindow_Loaded">
 
     <Window.Resources>
         <ResourceDictionary>
@@ -65,7 +65,7 @@
                     <ColumnDefinition Width="1.*"/>
                     <ColumnDefinition Width="1.*"/>
                 </Grid.ColumnDefinitions>
-                <Label Grid.Row="0" Grid.ColumnSpan="2" FontSize="21" TextOptions.TextHintingMode="Animated" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Name="lblLogin">登录</Label>
+                <Label Grid.Row="0" Grid.ColumnSpan="2" FontSize="21" TextOptions.TextHintingMode="Animated" VerticalContentAlignment="Center" HorizontalContentAlignment="Center">登录</Label>
                 <Label Grid.Row="1" VerticalContentAlignment="Center" Height="27" Grid.Column="0" Target="{Binding ElementName=txtUserName}">用户名/邮箱(_U)：</Label>
                 <TextBlock Grid.Row="1" Grid.Column="1" Width="60" HorizontalAlignment="Right" Height="15">
                     <Hyperlink Name="linkJoin" Click="linkJoin_Click">注册新用户</Hyperlink>
@@ -443,6 +443,9 @@
         <Border Width="170" Panel.ZIndex="1" Opacity="0.05" Background="White" Name="borderAwaitTime" Visibility="Hidden">
             <TextBlock Text="3" Foreground="#60B2E0" FontSize="300" VerticalAlignment="Center" HorizontalAlignment="Center" Name="txtBlockAwaitTime" />
         </Border>
+        
+        <!--随机参数-->
+        <Label Name="lblRandomParam" Visibility="Hidden"/>
     </Grid>
 
 </Controls:MetroWindow >
