--- a/TrainAssistant/MainWindow.xaml
+++ b/TrainAssistant/MainWindow.xaml
@@ -2,42 +2,19 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        Title="12306助手v1.1 Beta" Height="550" Width="1000" ShowTitleBar="True"  ShowIconOnTitleBar="True" Icon="/Resources/ic_train.ico" MinWidth="590" MinHeight="350" Loaded="MetroWindow_Loaded">
-
-    <Window.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colours.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
-                <ResourceDictionary Source="/TrainAssistant;component/Resources/Icons.xaml"/>
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.AnimatedTabControl.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.AnimatedSingleRowTabControl.xaml" />
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </Window.Resources>
-
-    <Controls:MetroWindow.WindowCommands>
+        Title="12306助手v1.1 Beta" Height="550" Width="1000" ShowTitleBar="True" EnableDWMDropShadow="True" ShowIconOnTitleBar="True" Icon="/Resources/ic_train.ico" MinWidth="590" MinHeight="350" Loaded="MetroWindow_Loaded">
+    
+    <Controls:MetroWindow.RightWindowCommands>
         <Controls:WindowCommands>
             <Button Content="设置" Foreground="#fff" Name="btnSite" />
             <Button Name="btnLoginPopup" Click="btnLoginPopup_Click" Foreground="#fff">
                 <StackPanel Orientation="Horizontal">
-                    <Rectangle Width="20" Height="20">
-                        <Rectangle.Resources>
-                            <SolidColorBrush x:Key="BlackBrush" Color="White" />
-                        </Rectangle.Resources>
-                        <Rectangle.Fill>
-                            <VisualBrush Stretch="Fill" Visual="{StaticResource appbar_cupcake}" />
-                        </Rectangle.Fill>
-                    </Rectangle>
                     <TextBlock Name="lblLoginName" Text="登录" HorizontalAlignment="Center" VerticalAlignment="Center" />
                 </StackPanel>
             </Button>
             <Button Content="注销" Foreground="#fff" Name="btnLogout" Visibility="Hidden" Click="btnLogout_Click" />
         </Controls:WindowCommands>
-    </Controls:MetroWindow.WindowCommands>
+    </Controls:MetroWindow.RightWindowCommands>
 
     <Grid>
         <Grid.RowDefinitions>
@@ -47,12 +24,10 @@
 
         <!--登录弹出层-->
         <Grid Background="#000" Opacity="0.5" Visibility="Hidden" Name="gridOpacity" Grid.Row="0" Panel.ZIndex="1" />
-        <Border Name="loginPopup" Grid.RowSpan="2" Visibility="Hidden" Width="470" Height="340" Background="#fff" Padding="17" Grid.Row="0" Panel.ZIndex="2">
+        <Border Name="loginPopup" Grid.RowSpan="2" Visibility="Hidden" Width="293" Height="280" Background="#fff" Padding="17" Grid.Row="0" Panel.ZIndex="2">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="40"/>
-                    <RowDefinition Height="27"/>
-                    <RowDefinition Height="30"/>
                     <RowDefinition Height="27"/>
                     <RowDefinition Height="30"/>
                     <RowDefinition Height="27"/>
@@ -70,19 +45,47 @@
                 <TextBlock Grid.Row="1" Grid.Column="1" Width="60" HorizontalAlignment="Right" Height="15">
                     <Hyperlink Name="linkJoin" Click="linkJoin_Click">注册新用户</Hyperlink>
                 </TextBlock>
-                <ComboBox Name="txtUserName" Grid.Row="2" Grid.ColumnSpan="2" Height="30" VerticalContentAlignment="Center" IsEditable="True" SelectionChanged="txtUserName_SelectionChanged" Controls:TextboxHelper.Watermark="输入用户名/邮箱" />
+                <ComboBox Name="txtUserName" Grid.Row="2" Grid.ColumnSpan="2" Height="30" VerticalContentAlignment="Center" IsEditable="True" SelectionChanged="txtUserName_SelectionChanged" Controls:TextBoxHelper.Watermark="输入用户名/邮箱" />
                 <Label Grid.Row="3" Height="27" VerticalContentAlignment="Center" Grid.Column="0" Target="{Binding ElementName=txtPassword}">密码(_P)：</Label>
                 <TextBlock Grid.Row="3" Grid.Column="1" HorizontalAlignment="Right" Height="15">
                     <Hyperlink Name="linkForgotPassword" Click="linkForgotPassword_Click">忘记密码</Hyperlink>
                 </TextBlock>
-                <PasswordBox Name="txtPassword" Grid.Row="4" Grid.ColumnSpan="2" Height="30" VerticalContentAlignment="Center" Controls:TextboxHelper.Watermark="输入密码" Controls:TextboxHelper.ClearTextButton="True"/>
-                <Label Grid.Row="5" Grid.Column="0" Content="验证码(_C)：" Target="{Binding ElementName=txtValidateCode}"/>
-                <TextBox Grid.Row="6" Grid.Column="0" Name="txtValidateCode" Controls:TextboxHelper.Watermark="输入验证码" VerticalContentAlignment="Center" Controls:TextboxHelper.ClearTextButton="True" Controls:TextboxHelper.SelectAllOnFocus="True" />
-                <Image Grid.Row="6" Grid.Column="1" Name="imgCode" Cursor="Hand" MouseLeftButtonUp="imgCode_MouseLeftButtonUp" ToolTip="单击更换图片" Width="80" HorizontalAlignment="Left" Margin="7,0,0,0"/>
-                <CheckBox Grid.Row="7" Grid.Column="0" Height="23" Margin="7,7,0,7" Name="chkRemeberMe">记住密码</CheckBox>
-                <CheckBox Grid.Row="7" Grid.Column="1" Height="23" Margin="7,7,0,7" Name="chkAutoLogin" Click="chkAutoLogin_Click">自动登录</CheckBox>
-                <Label Name="lblErrorMsg" Foreground="Red" Grid.ColumnSpan="2" Grid.Row="8" Height="30" VerticalContentAlignment="Center"></Label>
-                <Button Content="登录" Grid.Row="9" Grid.ColumnSpan="2" Name="btnLogin" Click="btnLogin_Click" Width="170" IsDefault="True" Style="{DynamicResource SquareButtonStyle}"/>
+                <PasswordBox Name="txtPassword" Grid.Row="4" Grid.ColumnSpan="2" Height="30" VerticalContentAlignment="Center" Controls:TextBoxHelper.Watermark="输入密码" Controls:TextBoxHelper.ClearTextButton="True"/>
+                <CheckBox Grid.Row="5" Grid.Column="0" Height="15" Margin="7,0,0,0" Name="chkRemeberMe" VerticalContentAlignment="Center">记住密码</CheckBox>
+                <CheckBox Grid.Row="5" Grid.Column="1" Height="15" Margin="7,0,0,0" Name="chkAutoLogin" Click="chkAutoLogin_Click" VerticalContentAlignment="Center">自动登录</CheckBox>
+                <Button Content="登录" Grid.Row="6" Grid.ColumnSpan="2" Name="btnLogin" Click="btnLogin_Click" Width="170" IsDefault="True" Style="{DynamicResource SquareButtonStyle}"/>
+                <Label Name="lblErrorMsg" Foreground="Red" Grid.ColumnSpan="2" Grid.Row="7" Height="30" VerticalContentAlignment="Center"></Label>
+            </Grid>
+        </Border>
+        
+        <!--登录验证码-->
+        <Border Name="loginCodePopup" Background="#fff" Panel.ZIndex="2" Width="293" Height="230" Grid.RowSpan="2" Visibility="Hidden">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="190" />
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1.*"/>
+                    <ColumnDefinition Width="1.*"/>
+                </Grid.ColumnDefinitions>
+                <Button Width="25" Height="25" Name="btnCloseLoginCodePopup" ToolTip="关闭" Cursor="Hand" Margin="0 -13 -13 0" VerticalAlignment="Top" HorizontalAlignment="Right" Grid.ColumnSpan="2" Panel.ZIndex="2" Click="btnCloseLoginCodePopup_Click">
+                    <Button.Template>
+                        <ControlTemplate>
+                            <Ellipse>
+                                <Ellipse.Fill>
+                                    <ImageBrush ImageSource="/Images/close.png"/>
+                                </Ellipse.Fill>
+                            </Ellipse>
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
+                <Image Grid.ColumnSpan="2" Name="imgLoginCode" MouseUp="imgLoginCode_MouseUp" />
+                <TextBlock Grid.Row="1" Width="50" HorizontalAlignment="Left" Height="15" Margin="7 0 0 0">
+                    <Hyperlink Name="linkChange">换一张？</Hyperlink>
+                </TextBlock>
+                <Button Name="btnCodeValidate" Style="{DynamicResource SquareButtonStyle}" Grid.Column="1" Grid.Row="1" Width="100" Height="30" HorizontalAlignment="Right" Margin="0 0 7 0" Content="验 证"/>
+                <Label Visibility="Visible" Name="lblLoginCode" Panel.ZIndex="-1"/>
             </Grid>
         </Border>
 
@@ -202,7 +205,7 @@
                             <ColumnDefinition Width="1.*"/>
                         </Grid.ColumnDefinitions>
                         <Label Content="验证码（_W）：" HorizontalAlignment="Right" VerticalAlignment="Center" Target="{Binding ElementName=txtOrderCode}"/>
-                        <TextBox Name="txtOrderCode" Controls:TextboxHelper.ClearTextButton="True" Grid.Column="1" Controls:TextboxHelper.Watermark="输入验证码" VerticalContentAlignment="Center" Height="27"/>
+                        <TextBox Name="txtOrderCode" Controls:TextBoxHelper.ClearTextButton="True" Grid.Column="1" Controls:TextBoxHelper.Watermark="输入验证码" VerticalContentAlignment="Center" Height="27"/>
                         <Image Name="imgOrderCode" Grid.Column="2" Width="70" Height="27" Cursor="Hand" ToolTip="单击更换验证码" MouseLeftButtonUp="imgOrderCode_MouseLeftButtonUp" />
                     </Grid>
                 </Border>
@@ -278,7 +281,7 @@
                         </ControlTemplate>
                     </Button.Template>
                 </Button>
-                <TextBox Height="30" Controls:TextboxHelper.Watermark="输入验证码" VerticalContentAlignment="Center" Controls:TextboxHelper.ClearTextButton="True" Name="txtAutoSubmitCode" KeyUp="txtAutoSubmitCode_KeyUp"/>
+                <TextBox Height="30" Controls:TextBoxHelper.Watermark="输入验证码" VerticalContentAlignment="Center" Controls:TextBoxHelper.ClearTextButton="True" Name="txtAutoSubmitCode" KeyUp="txtAutoSubmitCode_KeyUp"/>
                 <Image Grid.Column="1" Name="imgAutoSubmitOrderCode" Cursor="Hand" MouseLeftButtonUp="imgCode_MouseLeftButtonUp" ToolTip="单击更换图片" Width="80" HorizontalAlignment="Left" Height="30" Margin="6"/>
                 <Label Visibility="Hidden" Name="lblPassengers"/>
                 <Label Visibility="Hidden" Name="lblAutoIsChange"/>
@@ -306,7 +309,7 @@
                             <ColumnDefinition Width="1.*"/>
                         </Grid.ColumnDefinitions>
                         <Label Target="{Binding ElementName=txtStartAddress}" Content="出发站(_S)："  Grid.Row="0" Grid.Column="0" HorizontalContentAlignment="Right" VerticalContentAlignment="Center"/>
-                        <ComboBox Height="27" Name="txtStartCity" Grid.Column="1" Grid.Row="0" Controls:TextboxHelper.Watermark="输入出发站" IsEditable="True" KeyUp="txtStartCity_KeyUp" StaysOpenOnEdit="True" IsTextSearchEnabled="True" />
+                        <ComboBox Height="27" Name="txtStartCity" Grid.Column="1" Grid.Row="0" Controls:TextBoxHelper.Watermark="输入出发站" IsEditable="True" KeyUp="txtStartCity_KeyUp" StaysOpenOnEdit="True" IsTextSearchEnabled="True" />
                         <Border Grid.Row="0" Grid.Column="2">
                             <Grid>
                                 <Grid.ColumnDefinitions>
@@ -317,7 +320,7 @@
                                 <Label Content="到达站(_E)：" Grid.Column="1" HorizontalContentAlignment="Right"  Target="{Binding ElementName=txtEndAddress}" VerticalContentAlignment="Center" />
                             </Grid>
                         </Border>
-                        <ComboBox Height="27" Name="txtEndCity" Controls:TextboxHelper.Watermark="输入到达站" Grid.Column="3" Grid.Row="0" IsEditable="True" StaysOpenOnEdit="True" IsTextSearchEnabled="True" KeyUp="txtEndCity_KeyUp" />
+                        <ComboBox Height="27" Name="txtEndCity" Controls:TextBoxHelper.Watermark="输入到达站" Grid.Column="3" Grid.Row="0" IsEditable="True" StaysOpenOnEdit="True" IsTextSearchEnabled="True" KeyUp="txtEndCity_KeyUp" />
                         <Label Content="乘车日期(_D)：" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Grid.Row="0" Grid.Column="4" Target="{Binding ElementName=txtDate}" />
                         <Border Grid.Column="5">
                             <Grid>
@@ -437,7 +440,7 @@
         </Border>
 
         <!--等待动画-->
-        <Controls:ProgressRing Grid.RowSpan="2" IsActive="False" Name="progressRingAnima" Panel.ZIndex="2"/>
+        <Controls:ProgressRing Grid.RowSpan="2" IsActive="False" Name="progressRingAnima" Panel.ZIndex="2" />
 
         <!--自动搜索时间-->
         <Border Width="170" Panel.ZIndex="1" Opacity="0.05" Background="White" Name="borderAwaitTime" Visibility="Hidden">
