--- a/TrainAssistant/MainWindow.xaml
+++ b/TrainAssistant/MainWindow.xaml
@@ -51,7 +51,7 @@
                     <Hyperlink Name="linkForgotPassword" Click="linkForgotPassword_Click">忘记密码</Hyperlink>
                 </TextBlock>
                 <PasswordBox Name="txtPassword" Grid.Row="4" Grid.ColumnSpan="2" Height="30" VerticalContentAlignment="Center" Controls:TextBoxHelper.Watermark="输入密码" Controls:TextBoxHelper.ClearTextButton="True"/>
-                <CheckBox Grid.Row="5" Grid.Column="0" Height="18" Margin="7,0,0,0" Name="chkRemeberMe" VerticalContentAlignment="Center">记住密码</CheckBox>
+                <CheckBox Grid.Row="5" Grid.Column="0" Height="18" Margin="7,0,0,0" Name="chkRemeberMe" VerticalContentAlignment="Center">记住我</CheckBox>
                 <CheckBox Grid.Row="5" Grid.Column="1" Height="18" Margin="7,0,0,0" Name="chkAutoLogin" Click="chkAutoLogin_Click" VerticalContentAlignment="Center">自动登录</CheckBox>
                 <Button Content="登录" Grid.Row="6" Grid.ColumnSpan="2" Name="btnLogin" Click="btnLogin_Click" Width="170" IsDefault="True" Style="{DynamicResource SquareButtonStyle}"/>
                 <Label Name="lblErrorMsg" Foreground="Red" Grid.ColumnSpan="2" Grid.Row="7" Height="30" VerticalContentAlignment="Center"></Label>
