--- a/TrainAssistant/MainWindow.xaml
+++ b/TrainAssistant/MainWindow.xaml
@@ -24,14 +24,13 @@
 
         <!--登录弹出层-->
         <Grid Background="#000" Opacity="0.5" Visibility="Hidden" Name="gridOpacity" Grid.Row="0" Panel.ZIndex="1" />
-        <Border Name="loginPopup" Grid.RowSpan="2" Visibility="Hidden" Width="293" Height="280" Background="#fff" Padding="17" Grid.Row="0" Panel.ZIndex="2">
+        <Border Name="loginPopup" Grid.RowSpan="2" Visibility="Hidden" Width="293" Height="260" Background="#fff" Padding="17" Grid.Row="0" Panel.ZIndex="2">
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="40"/>
+                    <RowDefinition Height="50"/>
                     <RowDefinition Height="27"/>
                     <RowDefinition Height="30"/>
                     <RowDefinition Height="27"/>
-                    <RowDefinition Height="30"/>
                     <RowDefinition Height="30"/>
                     <RowDefinition Height="30"/>
                     <RowDefinition Height="30"/>
@@ -54,7 +53,6 @@
                 <CheckBox Grid.Row="5" Grid.Column="0" Height="18" Margin="7,0,0,0" Name="chkRemeberMe" VerticalContentAlignment="Center">记住我</CheckBox>
                 <CheckBox Grid.Row="5" Grid.Column="1" Height="18" Margin="7,0,0,0" Name="chkAutoLogin" Click="chkAutoLogin_Click" VerticalContentAlignment="Center">自动登录</CheckBox>
                 <Button Content="登录" Grid.Row="6" Grid.ColumnSpan="2" Name="btnLogin" Click="btnLogin_Click" Width="170" IsDefault="True" Style="{DynamicResource SquareButtonStyle}"/>
-                <Label Name="lblErrorMsg" Foreground="Red" Grid.ColumnSpan="2" Grid.Row="7" Height="30" VerticalContentAlignment="Center"></Label>
             </Grid>
         </Border>
         
@@ -88,7 +86,7 @@
                 <TextBlock Grid.Row="1" Width="50" HorizontalAlignment="Left" Height="15" Margin="7 0 0 0">
                     <Hyperlink Name="linkChange" Click="linkChange_Click">换一张？</Hyperlink>
                 </TextBlock>
-                <Button Name="btnCodeValidate" Style="{DynamicResource SquareButtonStyle}" Grid.Column="1" Grid.Row="1" Width="100" Height="30" HorizontalAlignment="Right" Margin="0 0 7 0" Content="验 证"/>
+                <Button Name="btnCodeValidate" Style="{DynamicResource SquareButtonStyle}" Grid.Column="1" Grid.Row="1" Width="100" Height="30" HorizontalAlignment="Right" Margin="0 0 7 0" Content="验 证" Click="btnCodeValidate_Click"/>
                 <TextBox Visibility="Hidden" Name="txtLoginCodes" Panel.ZIndex="-1"/>
             </Grid>
         </Border>
