--- a/TrainAssistant/MainWindow.xaml
+++ b/TrainAssistant/MainWindow.xaml
@@ -310,7 +310,7 @@
             </Grid>
         </Border>
 
-        <TabControl Grid.Row="0">
+        <TabControl Grid.Row="0" Name="tabItems">
             <TabControl.Items>
                 <TabItem Name="tabQuery" Header="车票查询/预订">
                     <Grid>
