--- a/TrainAssistant/NotifyIconResources.xaml
+++ b/TrainAssistant/NotifyIconResources.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:tb="http://www.hardcodet.net/taskbar"
-                    xmlns:local="clr-namespace:Windowless_Sample">
+                    xmlns:local="clr-namespace:TrainAssistant">
 
     <!-- The taskbar context menu - the first row is a dummy to show off simple data binding -->
     <!--
@@ -9,18 +9,18 @@
         reuse the same context menu (which is a resource) again (which will have its DataContext set to the old TaskbarIcon)
   -->
     <ContextMenu x:Shared="false" x:Key="SysTrayMenu">
-        <MenuItem Header="Show Window" Command="{Binding ShowWindowCommand}" />
-        <MenuItem Header="Hide Window" Command="{Binding HideWindowCommand}" />
+        <MenuItem Header="打开12306 for pc" Command="{Binding ShowWindowCommand}" />
+        <MenuItem Header="设置"/>
+        <MenuItem Header="关于"/>
         <Separator />
-        <MenuItem Header="Exit" Command="{Binding ExitApplicationCommand}" />
+        <MenuItem Header="退出" Command="{Binding ExitApplicationCommand}" />
     </ContextMenu>
-
 
     <!-- the application's NotifyIcon - started from App.xaml.cs. Declares its own view model. -->
     <tb:TaskbarIcon x:Key="NotifyIcon"
                     IconSource="/Resources/ic_train.ico"
-                    ToolTipText="Double-click for window, right-click for menu"
-                    DoubleClickCommand="{Binding ShowWindowCommand}"
+                    LeftClickCommand="{Binding ShowWindowCommand}"
+                    ToolTipText="12306 for pc，不一样的购票体验"
                     ContextMenu="{StaticResource SysTrayMenu}">
 
         <!-- self-assign a data context (could also be done programmatically) -->
